Changed color of My Projects in sidebar when selected to better highlight the selection for the user and added initial height for main app content to fix overflow bug

--- a/src/styles/SidebarView.css
+++ b/src/styles/SidebarView.css
@@ -160,8 +160,9 @@ img[class^="help"],
     color: var(--primary-text-accent-color);
 }
 
-.selected-project.projects-header {
+.selected-project > .projects-name {
     font-weight: 600;
+    color: var(--primary-text-color); 
 }
 
 .selected-project.project {
